[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/images/Bsher/m1.png" type="Texture" id=1]
[ext_resource path="res://assets/images/Bsher/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Bsher/m2.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Bsher/m3.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Bsher/m4.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Bsher/jump.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Bsher/a.png" type="Texture" id=7]
[ext_resource path="res://scripts/bsher.gd" type="Script" id=8]
[ext_resource path="res://scenes/LifeBar.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.77365, 112.648 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 56.4652 )

[node name="bsher" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 9
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, -0.4 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.36441, -16.4203 )
scale = Vector2( 0.625423, 0.93937 )
frames = SubResource( 5 )
animation = "idle"

[node name="LifeBar" parent="." instance=ExtResource( 9 )]
margin_left = -31.4644
margin_top = -95.1425
margin_right = 38.5356
margin_bottom = -82.1425

[node name="lap" type="Position2D" parent="."]
position = Vector2( 45, -30 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7

[node name="leftCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -500, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="rightCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 500, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.749115, -11.2373 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
